# WARDEN-CanaryWeave

./: .codespellrc  .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  setup.py
artifacts/: detail_1.jsonl  smoke_report.json
conf/: datasets.yaml  default.yaml  mcp_endpoints.yaml  stacks.yaml
demo_rules/: mcp_tool_path_boundary_rule.war  security_tool_extension_rule.war
design/: evaluation_methodology.md  multi_dataset_harness_architecture.md  next_phase_vigil_style_harness_plan.md  query_llm_gate.md  rule_schema.md
docs/: BUILD_AND_RUN.md  CASE_STUDY.md  GLOSSARY.md  README.md  attack_to_rule_mapping.md  canaryweave-fides-demo.cast  conf.py  datasets.md  demo_plan.md  index.rst  initial_research_report.md  llm_threat_rule_mapping.md  make.bat  next_phase_controlled_evidence_plan.md  paper_peer_review.md  peer_review_report.md  rule_authoring.md  running_evals.md  thesis.md
examples/: mcp_tool_path_boundary_rule.war
research/: policy_rule_fides_summary.md
rules/: agentic_boundary.war  capability_control.war  collection.war  credential_access.war  defense_evasion.war  discovery.war  execution.war  llm_agentic_abuse.war  llm_data_disclosure.war  llm_jailbreak.war  llm_obfuscation.war  llm_offensive_tooling.war  llm_prompt_injection.war  llm_social_engineering.war  persistence.war  privilege_escalation.war  prompt_boundary.war  prompt_injection.war
scripts/: check_markdown_fences.py  check_public_artifacts.py  demo_asciinema.sh  demo_rich.py  run_multi_dataset_eval.sh  run_smoke.sh  sync_assets.py
src/: README.md
tests/: test_adapters.py  (+31 more)
(+137 files in other folders)
